package ar.edu.utn.frba.dds.domain.entities.roles;

public interface Rol {
}
